Modified for nuget.

--- a/Alchemy4Tridion.Plugins.Sample.HelloWorld/Static/Styles/Hello.css
+++ b/Alchemy4Tridion.Plugins.Sample.HelloWorld/Static/Styles/Hello.css
@@ -5,6 +5,6 @@
  * ${JsUrl}
  * ...
  */
-.contextmenu #cm_helloworld .image {
+.contextmenu #cm_helloworld > .image {
     background-image: url('${ImgUrl}sample-small-icon.png');
 }
